# django-aggrid-ssrm-library

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
demo/: README.md  manage.py
demo/demo_app/: apps.py  models.py  urls.py  views.py
demo/demo_app/management/commands/: seed_demo.py
demo/demo_app/migrations/: 0001_initial.py
demo/demo_app/templates/demo_app/: index.html
demo/demo_project/: settings.py  urls.py  wsgi.py
src/aggrid_ssrm/: __init__.py  apps.py  column_values.py  engine.py  fields.py  filters.py  grouping.py  request.py  sorting.py  views.py
src/aggrid_ssrm/templates/aggrid_ssrm/: _grid.html
tests/: conftest.py  settings.py  test_column_values_comprehensive.py  test_edge_cases.py  test_engine.py  test_engine_comprehensive.py  test_filters.py  test_filters_comprehensive.py  test_grouping.py  test_grouping_comprehensive.py  test_json_array_filters.py  test_sorting.py
tests/test_app/: apps.py  models.py
